--- a/evotorRestApi/info.yaml
+++ b/evotorRestApi/info.yaml
@@ -6,7 +6,7 @@ description: |
 
    После интеграции, сторонние сервисы могут взаимодействовать с данными пользователей платформы с помощью HTTP-запросов.
    Кроме обращений к REST API облака, сторонние сервисы могут подписаться на вебхуки облака Эвотор
-   > С 1.06.2016 при работе с /api/v1/inventories/* Эвотор не будет передавать пустые необзательные (не отмеченные как Required) поля.
+   > С 1.06.2016 при работе с /api/v1/inventories/* Эвотор не будет передавать пустые необязательные (не отмеченные как Required) поля.
 
    ## Вебхуки
    Вебхуки - события, которые рассылает облако Эвотор на заданные адреса. Чтобы подписать сторонний сервис на вебхуки облака Эвотор, при создании приложения, на вкладке **Интеграция** требуется указать соответствующие веб-адреса.
