sequenceNumber field added
Denis Mikhaylov, [03.05.17 17:04]
Привет, надо добавить еще к каждому событию в billing events поле
sequenceNumber: Long - монотонно возрастающий номер события,  начинается
с 1, уникален в рамках одного subscriptionId.

Denis Mikhaylov, [03.05.17 17:05]
Это нужно чтобы принимающая сторона могла детектить события которые
пришли в неправильном порядке

Denis Mikhaylov, [03.05.17 17:05]
типа если увидели 1, 2, 4, то надо 4 не процессить, а дождаться 3

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -774,3 +774,8 @@ productId:
   description: Идентификатор приложения (uuid4).
   pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
   example: c0d01x35-5193-4cc2-9bfb-be20e0679498
+
+sequenceNumber:
+  type: integer
+  description: Номер события в последовательности. Номер непрерывно возрастает начиная с единицы. Необходим для соблюдения порядка обработки событий.
+  default: 4
