--- a/evotorCallbacks/subscriptionEventsDefinitions.yaml
+++ b/evotorCallbacks/subscriptionEventsDefinitions.yaml
@@ -23,7 +23,9 @@ SubscriptionCreated:
     timestamp:
       allOf:
       - $ref: ../definitions.yaml#/timestamp
-
+    sequenceNumber:
+      allOf:
+      - $ref: ../definitions.yaml#/sequenceNumber
 
 SubscriptionActivated:
   type: object
@@ -43,6 +45,9 @@ SubscriptionActivated:
     timestamp:
       allOf:
       - $ref: ../definitions.yaml#/timestamp
+    sequenceNumber:
+      allOf:
+      - $ref: ../definitions.yaml#/sequenceNumber
 
 SubscriptionRenewed:
   type: object
@@ -59,6 +64,9 @@ SubscriptionRenewed:
     timestamp:
       allOf:
       - $ref: ../definitions.yaml#/timestamp
+    sequenceNumber:
+      allOf:
+      - $ref: ../definitions.yaml#/sequenceNumber
 
 SubscriptionCancelled:
   type: object
@@ -72,6 +80,9 @@ SubscriptionCancelled:
     timestamp:
       allOf:
       - $ref: ../definitions.yaml#/timestamp
+    sequenceNumber:
+      allOf:
+      - $ref: ../definitions.yaml#/sequenceNumber
 
 SubscriptionTermsChanged:
   type: object
@@ -97,3 +108,6 @@ SubscriptionTermsChanged:
       timestamp:
         allOf:
         - $ref: ../definitions.yaml#/timestamp
+      sequenceNumber:
+        allOf:
+        - $ref: ../definitions.yaml#/sequenceNumber
