--- a/definitions.yaml
+++ b/definitions.yaml
@@ -778,4 +778,4 @@ productId:
 sequenceNumber:
   type: integer
   description: Номер события в последовательности. Номер непрерывно возрастает начиная с единицы. Необходим для соблюдения порядка обработки событий.
-  default: 4
+  example: 4
