--- a/paths.yaml
+++ b/paths.yaml
@@ -142,15 +142,15 @@
                pattern: >-
                  ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
      '400':
-       $ref: ../responses.yaml#/40020012003
+       $ref: ./responses.yaml#/40020012003
      '401':
-       $ref: ../responses.yaml#/40110021003
+       $ref: ./responses.yaml#/40110021003
      '402':
-       $ref: ../responses.yaml#/402
+       $ref: ./responses.yaml#/402
      '404':
-       $ref: ../responses.yaml#/404
+       $ref: ./responses.yaml#/404
      '405':
-       $ref: ../responses.yaml#/4051005
+       $ref: ./responses.yaml#/4051005
 
 
 /api.evotor.ru/api/v1/inventories/stores/{storeUuid}/products/delete:
@@ -268,15 +268,15 @@
      '200':
        description: OK
      '400':
-       $ref: ../responses.yaml#/40020012003
+       $ref: ./responses.yaml#/40020012003
      '401':
-       $ref: ../responses.yaml#/40110021003
+       $ref: ./responses.yaml#/40110021003
      '402':
-       $ref: ../responses.yaml#/402
+       $ref: ./responses.yaml#/402
      '404':
-       $ref: ../responses.yaml#/404
+       $ref: ./responses.yaml#/404
      '405':
-       $ref: ../responses.yaml#/4051005
+       $ref: ./responses.yaml#/4051005
 
 
 /partner.ru/api/v1/user/verify:
@@ -322,17 +322,17 @@
               maxLength: 128
               default: toaWaep4chou7ahkoogiu9Iusaht9ima
       '400':
-        $ref: ../responses.yaml#/40020012002
+        $ref: ./responses.yaml#/40020012002
       '401':
-        $ref: ../responses.yaml#/40110011006
+        $ref: ./responses.yaml#/40110011006
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/4051005
+        $ref: ./responses.yaml#/4051005
       '409':
-        $ref: ../responses.yaml#/4092004
+        $ref: ./responses.yaml#/4092004
 
 
 /partner.ru/api/v1/user/create:
@@ -372,17 +372,17 @@
               maxLength: 128
               default: toaWaep4chou7ahkoogiu9Iusaht9ima
       '400':
-        $ref: ../responses.yaml#/40020012002
+        $ref: ./responses.yaml#/40020012002
       '401':
-        $ref: ../responses.yaml#/4011001
+        $ref: ./responses.yaml#/4011001
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/4051005
+        $ref: ./responses.yaml#/4051005
       '409':
-        $ref: ../responses.yaml#/4092005
+        $ref: ./responses.yaml#/4092005
 
 
 /partner.ru/api/v1/user/tariff:
@@ -427,15 +427,15 @@
       '200':
         description: OK
       '400':
-        $ref: ../responses.yaml#/40020012002
+        $ref: ./responses.yaml#/40020012002
       '401':
-        $ref: ../responses.yaml#/4011001
+        $ref: ./responses.yaml#/4011001
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/40510051007
+        $ref: ./responses.yaml#/40510051007
 
 
 /partner.ru/api/v1/inventories/devices:
@@ -474,15 +474,15 @@
                 description: >-
                   Идентификатор сервиса посредника. Сервис посредник хранит соответствие сущностей платформы Эвотор и стороннего сервиса, если он не интегрирован непосредственно с платформой. Если сторонний сервис интегрируется непосредственно с платформой Эвотор, атрибут возвращать не требуется.
       '400':
-        $ref: ../responses.yaml#/4002001
+        $ref: ./responses.yaml#/4002001
       '401':
-        $ref: ../responses.yaml#/40110021003
+        $ref: ./responses.yaml#/40110021003
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/4051005
+        $ref: ./responses.yaml#/4051005
 
 
 /partner.ru/api/v1/inventories/employees:
@@ -521,15 +521,15 @@
                 description: >-
                   Идентификатор сервиса посредника. Сервис посредник хранит соответствие сущностей платформы Эвотор и стороннего сервиса, если он не интегрирован непосредственно с платформой. Если сторонний сервис интегрируется непосредственно с платформой Эвотор, атрибут возвращать не требуется.
       '400':
-        $ref: ../responses.yaml#/4002001
+        $ref: ./responses.yaml#/4002001
       '401':
-        $ref: ../responses.yaml#/40110021003
+        $ref: ./responses.yaml#/40110021003
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/4051005
+        $ref: ./responses.yaml#/4051005
 
 
 /partner.ru/api/v1/inventories/stores:
@@ -568,18 +568,18 @@
                 description: >-
                   Идентификатор сервиса посредника. Сервис посредник хранит соответствие сущностей платформы Эвотор и стороннего сервиса, если он не интегрирован непосредственно с платформой. Если сторонний сервис интегрируется непосредственно с платформой Эвотор, атрибут возвращать не требуется.
       '400':
-        $ref: ../responses.yaml#/4002001
+        $ref: ./responses.yaml#/4002001
       '401':
-        $ref: ../responses.yaml#/40110021003
+        $ref: ./responses.yaml#/40110021003
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/4051005
+        $ref: ./responses.yaml#/4051005
 
 
-/partner.ru/api/v1/receipt:
+/partner.ru/api/v1/receipts:
   post:
     tags:
       - Вебхуки-уведомления
@@ -600,15 +600,15 @@
       '200':
         description: OK
       '400':
-        $ref: ../responses.yaml#/40020012003
+        $ref: ./responses.yaml#/40020012003
       '401':
-        $ref: ../responses.yaml#/40110021003
+        $ref: ./responses.yaml#/40110021003
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/4051005
+        $ref: ./responses.yaml#/4051005
 
 
 /partner.ru/api/v1/user/token:
@@ -644,15 +644,15 @@
       '200':
         description: OK
       '400':
-        $ref: ../responses.yaml#/40020012002
+        $ref: ./responses.yaml#/40020012002
       '401':
-        $ref: ../responses.yaml#/4011001
+        $ref: ./responses.yaml#/4011001
       '402':
-        $ref: ../responses.yaml#/402
+        $ref: ./responses.yaml#/402
       '404':
-        $ref: ../responses.yaml#/404
+        $ref: ./responses.yaml#/404
       '405':
-        $ref: ../responses.yaml#/4051005
+        $ref: ./responses.yaml#/4051005
 
 
 /partner.ru/api/v1/user/event:
