--- a/definitions.yaml
+++ b/definitions.yaml
@@ -193,6 +193,8 @@ product:
       type: string
       description: |
         Уникальный идентификатор товара/группы в формате uuid4; уникален в рамках магазина; не может быть пустой строкой.
+
+        Для товара "Позиция по свободной цене", поле может принимать значение `null` или зарезервированное значение `390067bf-e8d3-4fcc-8c30-fbfd77a0a70d`.
       pattern: >-
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
     code:
@@ -743,7 +745,7 @@ receipt:
     fields:
       type: object
       description: |
-        Дополнительные поля. Нпример, поля пользователей программ лояльности. Поля передаются только в те сторонние сервисы, где они были созданы.
+        Дополнительные поля. Например, поля пользователей программ лояльности. Поля передаются только в те сторонние сервисы, где они были созданы.
 
 
 productToDelete:
