--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -24,6 +24,11 @@ tags:
   - name: Вебхуки-уведомления
     description:
       События, на которые сторонний сервис может подписаться. Облако Эвотор не ожидает ответа на эти события
+
+  - name: Остатки
+    description:
+      Запросы на изменение остатоков товаров в облаке Эвотор.
+
 produces:
     - application/json
 consumes:
