--- a/parameters.yaml
+++ b/parameters.yaml
@@ -74,3 +74,12 @@ storeUuid:
   type: string
   pattern: >-
     ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+
+productUuid:
+  name: productUuid
+  in: path
+  description: Идентификатор товара (uuid4), для которого действует запрос.
+  required: true
+  type: string
+  pattern: >-
+    ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
