--- a/paths.yaml
+++ b/paths.yaml
@@ -438,28 +438,28 @@
         $ref: ./responses.yaml#/40510051007
 
 
-#/api/v1/commodities:
-#  get:
-#    tags:
-#      - Вебхуки-запросы
-#    summary: По штрихкоду
-#    description: |
-#      Возвращает объект с информацией о товаре, найденного с помощью штрихкода и/или кода алкогольной продукции в базе стороннего сервиса.
-#    parameters:
-#      - $ref: ./parameters.yaml#/clientAuth
-#      - name: scanCode
-#        in: query
-#        required: true
-#        type: string
-#      - name: alcCode
-#        in: query
-#        required: false
-#        type: string
-#    responses:
-#      '200':
-#        schema:
-#          $ref: ./definitions.yaml#/commodity
-#        description: OK
+/partner.ru/api/v1/commodities:
+  get:
+    tags:
+      - Вебхуки-запросы
+    summary: Поиск по штрихкоду
+    description: |
+      Возвращает объект с информацией о товаре, найденном в базе стороннего сервиса с помощью штрихкода и/или кода алкогольной продукции.
+    parameters:
+      - $ref: ./parameters.yaml#/clientAuth
+      - name: scanCode
+        in: query
+        required: true
+        type: string
+      - name: alcCode
+        in: query
+        required: false
+        type: string
+    responses:
+      '200':
+        schema:
+          $ref: ./definitions.yaml#/commodity
+        description: OK
 
 
 /partner.ru/api/v1/inventories/devices:
@@ -869,3 +869,71 @@
         description: Неверный запрос
       '401':
         description: Не авторизован
+
+
+#/api.evotor.ru/api/v1/inventories/stores/{storeUuid}/products/quantities:
+# x-summary:
+# get:
+#    tags:
+#     - Товары и документы
+#    summary: 'Получить остатки товаров в магазине'
+#    description: |
+#        Возвращает информацию об остатках всех товаров в определённом магазине (`{storeUuid}`) пользователя платформы.
+#    parameters:
+#      - $ref: ./parameters.yaml#/auth
+#      - $ref: ./parameters.yaml#/storeUuid
+#      - $ref: ./parameters.yaml#/contentType
+#    responses:
+#      '200':
+#        description: OK
+#      '401':
+#        $ref: ./responses.yaml#/40110021003
+
+# post:
+#    tags:
+#     - Товары и документы
+#    summary: 'Передать остатки товара в магазине'
+#    description: |
+#        Передаёт информацию об остатках определённого товара (`{productUuid}`), в определённом магазине (`{storeUuid}`) пользователя платформы.
+#    parameters:
+#      - $ref: ./parameters.yaml#/auth
+#      - $ref: ./parameters.yaml#/storeUuid
+#      - $ref: ./parameters.yaml#/contentType
+#      - name: ''
+#        in: body
+#        description: JSON-объект, в котором требуется указать пары идентификатор продукта - остатки. Остатки требуется указывать в виде целого числа.
+#        required: true
+#        schema:
+#          type: object
+#          description:
+#        x-examples:
+#          application/json:
+#              productUuid: "quantitiesValue"
+#              productUuid2: "quantitiesValue"
+
+
+#    responses:
+#      '200':
+#        description: OK
+#      '401':
+#        $ref: ./responses.yaml#/40110021003
+
+
+#/api.evotor.ru/api/v1/inventories/stores/{storeUuid}/products/{productUuid}/quantities:
+# x-summary:
+# get:
+#    tags:
+#     - Товары и документы
+#    summary: 'Получить остатки определённого товара в магазине'
+#    description: |
+#        Возвращает информацию об остатках всех определённого товара (`{productUuid}`) в определённом магазине (`{storeUuid}`) пользователя платформы.
+#    parameters:
+#      - $ref: ./parameters.yaml#/auth
+#      - $ref: ./parameters.yaml#/storeUuid
+#      - $ref: ./parameters.yaml#/productUuid
+#      - $ref: ./parameters.yaml#/contentType
+#    responses:
+#      '200':
+#        description: OK
+#      '401':
+#        $ref: ./responses.yaml#/40110021003
