--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -25,9 +25,9 @@ tags:
     description:
       События, на которые сторонний сервис может подписаться. Облако Эвотор не ожидает ответа на эти события
 
-  - name: Остатки
-    description:
-      Запросы на изменение остатоков товаров в облаке Эвотор.
+#  - name: Остатки
+#    description:
+#      Запросы на изменение остатоков товаров в облаке Эвотор.
 
 produces:
     - application/json
