--- a/definitions.yaml
+++ b/definitions.yaml
@@ -9,33 +9,15 @@ registerFormData:
       description: Уникальный идентификатор пользователя в облаке Эвотор.
       pattern: '^[0-9]{2}-[0-9]{15}$'
       example: 01-000000000000001
-    username:
-      type: string
-      description: Имя пользователя.
-      example: v.pupkin
-    password:
-      type: string
-      description: Пароль учётной записи.
-      example: superpassword
-    email:
-      description: Адрес электронной почты (e-mail).
-      type: string
-      pattern: >-
-        ^[а-яА-Яa-zA-Z0-9\_\-\.]+\@[а-яА-Яa-zA-Z0-9\_\-\.]+\.[а-яА-Яa-zA-Z0-9\_\-\.]+$
-      example: v.pupkin@pupk.in
-    phone:
-      type: string
-      description: Номер телефона пользователя.
-      pattern: '^\+7[0-9]{10}$'
-      example: '+79876543210'
     customField:
       type: string
       description: |
-        Дополнительное поле для данных пользователя. Название поля характеризует его содержимое. Поле отображается в форме регистрации / авторизации на странице приложения в Магазине приложений. Форма может содержать не более шести полей.
+        Помимо `userUuid` могут передаваться и другие поля, значения которых пользователь указывает в интерфейсе [магазина приложений](https://market.evotor.ru/) при регистрации учётной записи в стороннем сервисе. Создавайте необходимые дополнительные поля в разделе **Интеграция**, на [сайте разработчиков](https://dev.evotor.ru).
 
-        Облако Эвотор передаёт дополнительные поля в сторонний сервис во время авторизации (`/verify`) или регистрации (`/create`) пользователя.
+        Облако Эвотор передаёт дополнительные поля в сторонний сервис во время [авторизации](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1verify%2Fpost) или [регистрации](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1create%2Fpost) пользователя.
 
-        > Не добавляйте поля для данных, которые пользователь может указать в Личном кабинете, после установки приложения.
+        Не добавляйте поля для данных, которые пользователь может указать в Личном кабинете, после установки приложения.
+
       example: Пример значения
 
 
