--- a/definitions.yaml
+++ b/definitions.yaml
@@ -508,7 +508,7 @@ store:
       description: >-
         Уникальный идентификатор магазина в облаке Эвотор, в формате uuid4. Не может содержать пустую строку или принимать значение `null`.
       pattern: >-
-        ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+        ^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-5][0-9a-fA-F]{3}-[89aAbB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$
     name:
       type: string
       description: Имя магазина в платформе Эвотор. Не может содержать пустую строку или принимать значение `null`.
@@ -585,7 +585,7 @@ device:
       type: string
       description: Уникальный идентификатор смарт-терминала в платформе Эвотор, в формате uuid4.
       pattern: >-
-        ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+        ^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-5][0-9a-fA-F]{3}-[89aAbB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$
     name:
       type: string
       description: Имя смарт-терминала в платформе Эвотор. Не может содержать пустую строку или принимать значение `null`.
