Изменил описание /partner.ru/api/v1/receipts

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -735,11 +735,7 @@ receipt:
     totalAmount:
       type: number
       description: Общая сумма чека.
-    clientUuid:
-      type: string
-      description: |
-        Уникальный идентификатор (`uuid`) клиента. Появляется после того, как клиент указал номер телефона, e-mail или другие данные, например в программе лояльности.
-    fields:
+    extras:
       type: object
       description: |
         Дополнительные поля. Например, поля пользователей программ лояльности. Поля передаются только в те сторонние сервисы, где они были созданы.
