сообщение считается доставленным, если сторонний сервер ответил 200 ОК

--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -23,7 +23,7 @@ tags:
 
   - name: Вебхуки-уведомления
     description:
-      События, на которые сторонний сервис может подписаться. Облако Эвотор не ожидает ответа на эти события
+      События, на которые сторонний сервис может подписаться. Облако Эвотор считает, что сообщение доставлено, если сторонний сервиси ответил 200 ОК.
 
 #  - name: Остатки
 #    description:
