deprecated эндпоинт /tariff

--- a/paths.yaml
+++ b/paths.yaml
@@ -371,6 +371,7 @@
   post:
     tags:
       - Вебхуки-запросы
+      - Не рекомендуется
     summary: 'Активация / деактивация тарифа'
     description: |
       Активация / деактивация тарифа для учетной записи пользователя в стороннем сервисе.
