/tariff endpoint deprecated

--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -25,10 +25,10 @@ tags:
     description:
       События, на которые сторонний сервис может подписаться. Облако Эвотор считает, что сообщение доставлено, если сторонний сервиси ответил 200 ОК.
 
-  - name: Не рекомендуется
-    description:
-      Использование метода не рекомендуется, так как метод устарел.
-    x-traitTag: true
+#  - name: Не рекомендуется
+#    description:
+#      Использование метода не рекомендуется, так как метод устарел.
+#    x-traitTag: true
 
 produces:
     - application/json
