--- a/paths.yaml
+++ b/paths.yaml
@@ -371,9 +371,9 @@
   post:
     tags:
       - Вебхуки-запросы
-      - Не рекомендуется
     summary: 'Активация / деактивация тарифа'
     description: |
+      **Важно:** Не рекомендуется использовать этот метод. Используйте события биллинга.
       Активация / деактивация тарифа для учетной записи пользователя в стороннем сервисе.
     parameters:
       - $ref: ./parameters.yaml#/serverAuth
