--- a/paths.yaml
+++ b/paths.yaml
@@ -298,8 +298,12 @@
             - token
           properties:
             userUuid:
-              allOf:
-                - $ref: ./definitions.yaml#/userId
+              type: string
+              description: |
+                **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+                Идентификатор пользователя в облаке Эвотор.
+              pattern: '^[0-9]{2}-[0-9]{15}$'
             hasBilling:
               type: boolean
               description: |
@@ -349,8 +353,12 @@
             - token
           properties:
             userUuid:
-              allOf:
-                - $ref: ./definitions.yaml#/userId
+              type: string
+              description: |
+                **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+                Идентификатор пользователя в облаке Эвотор.
+              pattern: '^[0-9]{2}-[0-9]{15}$'
             token:
               description: |
                 Токен, который облако Эвотор будет передавать в заголове `Authorization` с типом `Bearer`, для авторизации своих HTTP-запросов в стороннем сервисе.
@@ -390,8 +398,13 @@
             - status
           properties:
             userUuid:
-              allOf:
-                - $ref: ./definitions.yaml#/userId
+              type: string
+              description: |
+                **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+                Идентификатор пользователя в облаке Эвотор.
+              pattern: '^[0-9]{2}-[0-9]{15}$'
+              example: 01-000000000000001
             tariffId:
               type: string
               description: Код тарифа в платформе Эвотор.
@@ -601,8 +614,12 @@
             - token
           properties:
             userUuid:
-              allOf:
-                - $ref: ./definitions.yaml#/userId
+              type: string
+              description: |
+                **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+                Идентификатор пользователя в облаке Эвотор.
+              pattern: '^[0-9]{2}-[0-9]{15}$'
             token:
               type: string
               description: Токен приложения.
