userUuid parameter deprecated

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -6,7 +6,10 @@ registerFormData:
     userUuid:
       -$ref: '#/userId'
       type: string
-      description: Уникальный идентификатор пользователя в облаке Эвотор.
+      description: |
+        **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+        Идентификатор пользователя в облаке Эвотор.
       pattern: '^[0-9]{2}-[0-9]{15}$'
       example: 01-000000000000001
     customField:
