--- a/info.yaml
+++ b/info.yaml
@@ -1,4 +1,4 @@
-version: 1.0.8
+version: 1.0.9
 title: API Эвотор
 description: |
    # О REST API Эвотор
@@ -10,6 +10,7 @@ description: |
 
    ## Вебхуки
    Вебхуки - события, которые рассылает облако Эвотор на заданные адреса. Чтобы подписать сторонний сервис на вебхуки облака Эвотор, при создании приложения, на вкладке **Интеграция** требуется указать соответствующие веб-адреса.
+
    Облако Эвотор поддерживает два вида вебхуков:
 
      * Уведомления. Облако гарантирует доставку вебхуков этого типа, но не требует подтверждения действия от стороннего сервиса.
@@ -19,25 +20,17 @@ description: |
    Запросы стороннего сервера к REST API, облако Эвотор авторизует с помощью **токена приложения**. Вебхуки облака сторонний сервис авторизует с помощью **токена стороннего сервиса** и **токена пользователя**.
 
    ## Токен приложения
-   Все запросы к REST API облака Эвотор, должны содержать HTTP-заголовок `X-Authorization`, в котором требуется указать **токен приложения**. Токен можно получить одним из следующих способов:
+   Облако присваивает токен приложения каждому установленному приложению и с его помощью определяет в рамках какого пользователя действуют запросы стороннего сервиса. При запросе к REST API Облака Эвотор, например, для получения списка товаров или магазинов пользователя, сторонний сервис передаёт *токен приложения* в заголовке `X-Authorization`.
 
-   * В GET-параметре `token` веб-адреса iframe-приложения:
-       ```HTML
-       https://partner.org/#/?uid=01-000000000011111&token=string
-       ```
-
-   * В Личном кабинете пользователя Эвотор, в разделе **Настройки** приложения.
-     ![Токен для интеграции с 1с](images/api-key.png)
-
-   * С помощью вебхука **[POST] Передача токена приложения**. Для этого сторонний сервис должен поддерживать адрес `http://partner.ru/api/v1/user/token`.
+   Информацию о том, как получить токен приложения, [смотрите в документации](https://developer.evotor.ru/docs/doc_authorization.html).
 
    ## Токен стороннего сервиса
-   **Токен стороннего сервиса** необходим для авторизации вебхуков-запросов. В зависимости от способа авторизации, вебхуки-запросы к стороннему сервису содержат заголовок `Authorization` с типом `Basic` или `Bearer`:
+   *Токен стороннего сервиса* необходим для авторизации вебхуков-запросов. В зависимости от способа авторизации, вебхуки-запросы к стороннему сервису содержат заголовок `Authorization` с типом `Basic` или `Bearer`:
 
-   * Если сторонний сервис поддерживает авторизацию с типом `Basic`, в Эвотор требуется предоставить имя пользователя и пароль в формате `username:password`.
+     * Если сторонний сервис поддерживает авторизацию с типом `Basic`, в Эвотор требуется предоставить имя пользователя и пароль в формате `username:password`. Вы можете сделать это на вкладке **Интеграция** вашего приложения, на сайте [dev.evotor.ru](https://dev.evotor.ru).
 
-   * Если сторонний сервис поддерживает авторизацию с типом `Bearer`, в Эвотор требуется предоставить токен в формате `string`.
+     * Если сторонний сервис поддерживает авторизацию с типом `Bearer`, в Эвотор требуется предоставить токен в формате `string`. Вы можете сделать это на вкладке **Интеграция** вашего приложения, на сайте [dev.evotor.ru](https://dev.evotor.ru).
 
-   В ответ на вебхуки **[POST] Авторизация пользователя**, **[POST] Регистрация учётной записи** и **[POST] Активация / деактивация тарифа**, сторонний сервис сообщает облаку Эвотор **токен пользователя**, который необходим, чтобы авторизовать все остальные вебхуки Эвотора.
+   В ответ на вебхуки [**[POST] Авторизация пользователя**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1verify%2Fpost), [**[POST] Регистрация учётной записи**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1create%2Fpost) и [**[POST] Активация / деактивация тарифа**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1tariff%2Fpost), сторонний сервис сообщает облаку Эвотор *токен пользователя*, который необходим, чтобы авторизовать все остальные вебхуки Эвотора.
 
-   Сторонний веб-сервис также может обращаться в облако Эвотор за дополнительной информацией. Токен для авторизации таких запросов Эвотор передаёт в вебхуке  **[POST] Передача токена приложения**.
+   Сторонний веб-сервис также может обращаться в облако Эвотор за дополнительной информацией. Токен для авторизации таких запросов Эвотор передаёт в вебхуке  [**[POST] Передача токена приложения**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1token%2Fpost).
